# embedded-mbed

./: .gitignore  .testRunner.cpp.swp  CMakeLists.txt  INA.cpp  INA.h  LICENSE  Makefile  README.md  dataFormat.cpp  dataFormat.h  device.yml  i2cdevice.cpp  install-pre-commit.sh  mbed_app.json  parseConfigs.py  pre-commit  setup.yml  testRunner.cpp  tests.yml
.github/workflows/: run-tests.yml
devices/include/: INA219.h  INA281.h  mockDevice.h  thermistor.h
devices/src/: INA219.cpp  INA281.cpp  mockDevice.cpp  thermistor.cpp
drivers/include/: canmanager.h  ethernet.h  i2cdevice.h  mutexless_analog.h
drivers/src/: canmanager.cpp  ethernet.cpp  i2cdevice.cpp  uart.cpp
helpers/: serialWrapper.cpp  serialWrapper.h
tests/: README.md  serialTest.cpp  test.h
